--- a/web-proxy.conf
+++ b/web-proxy.conf
@@ -7,7 +7,7 @@ http {
        listen [::]:80;
        proxy_set_header Host $host;
        proxy_set_header X-Forwarded-For $remote_addr;
-       server_name  rtorrent.localhost;
+       server_name  rtorrent.downloadsquad.localhost;
        location / {
            proxy_pass http://unix:/comm/rtorrent/rtorrent_ui.sock;
        }
@@ -17,7 +17,7 @@ http {
        listen [::]:80;
        proxy_set_header Host $host;
        proxy_set_header X-Forwarded-For $remote_addr;
-       server_name  prowlarr.localhost;
+       server_name  prowlarr.downloadsquad.localhost;
 
        # reference: https://wiki.servarr.com/prowlarr/system#could-not-connect-to-signalr
        proxy_http_version 1.1;
@@ -33,7 +33,7 @@ http {
        listen [::]:80;
        proxy_set_header Host $host;
        proxy_set_header X-Forwarded-For $remote_addr;
-       server_name  sonarr.localhost;
+       server_name  sonarr.downloadsquad.localhost;
        location / {
            proxy_pass http://unix:/comm/sonarr/sonarr.sock;
        }
@@ -43,7 +43,7 @@ http {
        listen [::]:80;
        proxy_set_header Host $host;
        proxy_set_header X-Forwarded-For $remote_addr;
-       server_name  lidarr.localhost;
+       server_name  lidarr.downloadsquad.localhost;
        location / {
            proxy_pass http://unix:/comm/lidarr/lidarr.sock;
        }
@@ -53,7 +53,7 @@ http {
        listen [::]:80;
        proxy_set_header Host $host;
        proxy_set_header X-Forwarded-For $remote_addr;
-       server_name  radarr.localhost;
+       server_name  radarr.downloadsquad.localhost;
        location / {
            proxy_pass http://unix:/comm/radarr/radarr.sock;
        }
