--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,10 @@ version: "3.7"
 services:
 
   vpn-tunnel:
-    image: lscr.io/linuxserver/wireguard
+    image: lscr.io/linuxserver/wireguard # alternatively, use "qmcgaw/gluetun" or "dperson/openvpn-client"
     container_name: tunnel-mango
     restart: unless-stopped
+    # remove the stuff below here if you are not using wireguard
     cap_add:
       - NET_ADMIN
       - SYS_MODULE
