--- a/aggregator-proxy.conf
+++ b/aggregator-proxy.conf
@@ -4,7 +4,7 @@ server {
     listen [::]:80;
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
-    server_name radarr.downloadsquad.local;
+    server_name radarr.downloadsquad;
     location / {
         proxy_pass http://unix:/comm/radarr.sock;
     }
@@ -14,7 +14,7 @@ server {
     listen [::]:80;
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
-    server_name lidarr.downloadsquad.local;
+    server_name lidarr.downloadsquad;
     location / {
         proxy_pass http://unix:/comm/lidarr.sock;
     }
@@ -24,7 +24,7 @@ server {
     listen [::]:80;
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
-    server_name sonarr.downloadsquad.local;
+    server_name sonarr.downloadsquad;
     location / {
         proxy_pass http://unix:/comm/sonarr.sock;
     }
@@ -34,7 +34,7 @@ server {
     listen [::]:80;
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
-    server_name readarr.downloadsquad.local;
+    server_name readarr.downloadsquad;
     location / {
         proxy_pass http://unix:/comm/readarr.sock;
     }
@@ -46,7 +46,7 @@ server {
     listen [::]:8080; # needed because they don't know how to use unix domain sockets
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
-    server_name rtorrent.downloadsquad.local;
+    server_name rtorrent.downloadsquad;
     location / {
         proxy_pass http://unix:/comm/rtorrent.sock;
     }
@@ -58,7 +58,7 @@ server {
     listen [::]:9696; # needed because they don't know how to use unix domain sockets
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
-    server_name prowlarr.downloadsquad.local;
+    server_name prowlarr.downloadsquad;
     location / {
         proxy_pass http://unix:/comm/prowlarr.sock;
     }
