add rtorrent rpc socket internally

--- a/aggregator-proxy.conf
+++ b/aggregator-proxy.conf
@@ -42,13 +42,21 @@ server {
 server {
     listen 80;
     listen [::]:80;
-    listen 8080;      # for other containers
-    listen [::]:8080; # needed because they don't know how to use unix domain sockets
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
     server_name rtorrent.downloadsquad;
     location / {
-        proxy_pass http://unix:/comm/rtorrent.sock;
+        proxy_pass http://unix:/comm/rtorrent_ui.sock;
+    }
+}
+server {
+    listen 8000;      # for other containers
+    listen [::]:8000; # needed because they don't know how to use unix domain sockets
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-For $remote_addr;
+    server_name rtorrent.downloadsquad;
+    location / {
+        proxy_pass http://unix:/comm/rtorrent_rpc.sock;
     }
 }
 server {
