add rtorrent rpc socket externally

--- a/vpn-proxy.conf
+++ b/vpn-proxy.conf
@@ -1,8 +1,14 @@
 # used to reach containers inside the VPN (rtorrent, prowlarr) from outside 
 server {
-    listen unix:/comm/rtorrent.sock;
+    listen unix:/comm/rtorrent_ui.sock;
     location / {
         proxy_pass http://localhost:8080;
+    }
+}
+server {
+    listen unix:/comm/rtorrent_rpc.sock;
+    location / {
+        proxy_pass http://localhost:8000;
     }
 }
 server {
