--- a/aggregator-proxy.conf
+++ b/aggregator-proxy.conf
@@ -1,47 +1,52 @@
-# these servers are for host/outside host -> containers
+# access to containers outside the VPN
 server {
-    listen 80;
-    listen [::]:80;
+    listen 80;                     # for access by humans
+    listen [::]:80;                # for access by humans
+    listen unix:/comm/radarr.sock; # for access by containers inside the VPN
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
     server_name radarr.downloadsquad;
     location / {
-        proxy_pass http://unix:/comm/radarr.sock;
+        proxy_pass http://localhost:7878;
     }
 }
 server {
-    listen 80;
-    listen [::]:80;
+    listen 80;                     # for access by humans
+    listen [::]:80;                # for access by humans
+    listen unix:/comm/lidarr.sock; # for access by containers inside the VPN
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
     server_name lidarr.downloadsquad;
     location / {
-        proxy_pass http://unix:/comm/lidarr.sock;
+        proxy_pass http://localhost:8686;
     }
 }
 server {
-    listen 80;
-    listen [::]:80;
+    listen 80;                     # for access by humans
+    listen [::]:80;                # for access by humans
+    listen unix:/comm/sonarr.sock; # for access by containers inside the VPN
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
     server_name sonarr.downloadsquad;
     location / {
-        proxy_pass http://unix:/comm/sonarr.sock;
+        proxy_pass http://localhost:8989;
     }
 }
 server {
-    listen 80;
-    listen [::]:80;
+    listen 80;                      # for access by humans
+    listen [::]:80;                 # for access by humans
+    listen unix:/comm/readarr.sock; # for access by containers inside VPN
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
     server_name readarr.downloadsquad;
     location / {
-        proxy_pass http://unix:/comm/readarr.sock;
+        proxy_pass http://localhost:8787;
     }
 }
+# access to containers inside the VPN
 server {
-    listen 80;
-    listen [::]:80;
+    listen 80;      # for access by humans
+    listen [::]:80; # for access by humans
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
     server_name rtorrent.downloadsquad;
@@ -50,24 +55,24 @@ server {
     }
 }
 server {
-    listen 8000;      # for other containers
-    listen [::]:8000; # needed because they don't know how to use unix domain sockets
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-For $remote_addr;
-    server_name rtorrent.downloadsquad;
-    location / {
-        proxy_pass http://unix:/comm/rtorrent_rpc.sock;
-    }
-}
-server {
-    listen 80;
-    listen [::]:80;
-    listen 9696;      # for other containers
-    listen [::]:9696; # needed because they don't know how to use unix domain sockets
+    listen 80;      # for access by humans
+    listen [::]:80; # for access by humans
+    listen 9696;      # for access by containers outside the VPN
+    listen [::]:9696; # for access by containers outside the VPN
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
     server_name prowlarr.downloadsquad;
     location / {
         proxy_pass http://unix:/comm/prowlarr.sock;
+    }
+}
+server {
+    listen 8000;      # for access by containers outside the VPN
+    listen [::]:8000; # for access by containers outside the VPN
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-For $remote_addr;
+    server_name rtorrent.downloadsquad;
+    location / {
+        proxy_pass http://unix:/comm/rtorrent_rpc.sock;
     }
 }
