fix readarr port & add comment

--- a/vpn-proxy.conf
+++ b/vpn-proxy.conf
@@ -1,26 +1,26 @@
-# used to reach containers inside the VPN (rtorrent, prowlarr) from outside 
+# access to containers inside the VPN
 server {
-    listen unix:/comm/rtorrent_ui.sock;
+    listen unix:/comm/rtorrent_ui.sock; # for access by containers outside the VPN
     location / {
         proxy_pass http://localhost:8080;
     }
 }
 server {
-    listen unix:/comm/rtorrent_rpc.sock;
+    listen unix:/comm/rtorrent_rpc.sock; # for access by containers outside the VPN
     location / {
         proxy_pass http://localhost:8000;
     }
 }
 server {
-    listen unix:/comm/prowlarr.sock;
+    listen unix:/comm/prowlarr.sock; # for access by containers outside the VPN
     location / {
         proxy_pass http://localhost:9696;
     }
 }
-# use to reach containers outside the VPN from inside (rtorrent, prowlarr) because they don't know how to use unix domain sockets
+# access to containers outside the VPN
 server {
-    listen 7878;
-    listen [::]:7878;
+    listen 7878;      # for access by containers inside the VPN
+    listen [::]:7878; # for access by containers inside the VPN
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
     location / {
@@ -28,8 +28,8 @@ server {
     }
 }
 server {
-    listen 8686;
-    listen [::]:8686;
+    listen 8686;      # for access by containers inside the VPN
+    listen [::]:8686; # for access by containers inside the VPN
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
     location / {
@@ -37,8 +37,8 @@ server {
     }
 }
 server {
-    listen 8989;
-    listen [::]:8989;
+    listen 8989;      # for access by containers inside the VPN
+    listen [::]:8989; # for access by containers inside the VPN
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
     location / {
@@ -46,8 +46,8 @@ server {
     }
 }
 server {
-    listen 7878;
-    listen [::]:7878;
+    listen 8787;      # for access by containers inside the VPN
+    listen [::]:8787; # for access by containers inside the VPN
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
     location / {
