--- a/aggregator-proxy.conf
+++ b/aggregator-proxy.conf
@@ -1,10 +1,24 @@
+# for the homepage
+server {
+    listen 80;      # for access by humans
+    listen [::]:80; # for access by humans
+}
+map $http_origin $allowed_origins {
+    "http://downloadsquad"         "http://downloadsquad";
+    "http://downloadsquad."        "http://downloadsquad."; # for windows compatibility
+    "http://downloadsquad.:81"     "http://downloadsquad.:81"; # for a different port
+    default                    "";
+}
+add_header 'Access-Control-Allow-Origin' $allowed_origins always;
+add_header 'Vary' 'Origin' always;
+proxy_set_header Host $host;
+proxy_set_header X-Forwarded-For $remote_addr;
+
 # access to containers outside the VPN
 server {
     listen 80;                     # for access by humans
     listen [::]:80;                # for access by humans
     listen unix:/comm/radarr.sock; # for access by containers inside the VPN
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-For $remote_addr;
     server_name radarr.downloadsquad;
     location / {
         proxy_pass http://localhost:7878;
@@ -14,8 +28,6 @@ server {
     listen 80;                     # for access by humans
     listen [::]:80;                # for access by humans
     listen unix:/comm/lidarr.sock; # for access by containers inside the VPN
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-For $remote_addr;
     server_name lidarr.downloadsquad;
     location / {
         proxy_pass http://localhost:8686;
@@ -25,8 +37,6 @@ server {
     listen 80;                     # for access by humans
     listen [::]:80;                # for access by humans
     listen unix:/comm/sonarr.sock; # for access by containers inside the VPN
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-For $remote_addr;
     server_name sonarr.downloadsquad;
     location / {
         proxy_pass http://localhost:8989;
@@ -36,19 +46,16 @@ server {
     listen 80;                      # for access by humans
     listen [::]:80;                 # for access by humans
     listen unix:/comm/readarr.sock; # for access by containers inside VPN
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-For $remote_addr;
     server_name readarr.downloadsquad;
     location / {
         proxy_pass http://localhost:8787;
     }
 }
+
 # access to containers inside the VPN
 server {
     listen 80;      # for access by humans
     listen [::]:80; # for access by humans
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-For $remote_addr;
     server_name rtorrent.downloadsquad;
     location / {
         proxy_pass http://unix:/comm/rtorrent_ui.sock;
@@ -59,8 +66,6 @@ server {
     listen [::]:80; # for access by humans
     listen 9696;      # for access by containers outside the VPN
     listen [::]:9696; # for access by containers outside the VPN
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-For $remote_addr;
     server_name prowlarr.downloadsquad;
     location / {
         proxy_pass http://unix:/comm/prowlarr.sock;
@@ -69,8 +74,6 @@ server {
 server {
     listen 8000;      # for access by containers outside the VPN
     listen [::]:8000; # for access by containers outside the VPN
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-For $remote_addr;
     server_name rtorrent.downloadsquad;
     location / {
         proxy_pass http://unix:/comm/rtorrent_rpc.sock;
