--- a/aggregator-proxy.conf
+++ b/aggregator-proxy.conf
@@ -6,7 +6,7 @@ server {
 map $http_origin $allowed_origins {
     "http://downloadsquad"         "http://downloadsquad";
     "http://downloadsquad."        "http://downloadsquad."; # for windows compatibility
-    "http://downloadsquad.:81"     "http://downloadsquad.:81"; # for a different port
+    # "http://downloadsquad.:81"     "http://downloadsquad.:81"; # for a different port
     default                    "";
 }
 add_header 'Access-Control-Allow-Origin' $allowed_origins always;
