--- a/aggregator-proxy.conf
+++ b/aggregator-proxy.conf
@@ -1,5 +1,6 @@
 # for the homepage
 server {
+    server_name _;
     listen 80;      # for access by humans
     listen [::]:80; # for access by humans
 }
